Fix justification snippets having some text outside the scroll area (#1274)
* Add a div to wrap justification snippets that add extra context outside the span so they are also within the scrolling container.

* Revert .justification-selection css removal, this css is used to differentiate user resolved justification from the added context

* Fix truncated property value comparison with whitespace

--- a/web/war/src/main/webapp/less/util/popovers/propertyInfo.less
+++ b/web/war/src/main/webapp/less/util/popovers/propertyInfo.less
@@ -63,11 +63,14 @@
     }
     .justificationValue {
       padding: 0.25em 0.5em;
-      
-      .selection {
-        display: block;
+
+      .justification-snippet {
         max-height: 6em;
         overflow-y: auto;
+
+        .selection {
+          .justification-selection;
+        }
       }
 
       .sourceInfoTitle {
