--- a/web/war/src/main/webapp/less/fields/fields.less
+++ b/web/war/src/main/webapp/less/fields/fields.less
@@ -94,6 +94,9 @@ input.invalid:focus, textarea.invalid:focus, select.invalid:focus {
     .text {
       display:block;
       font-style: italic;
+      .selection {
+        .justification-selection;
+      }
       &:before { content: '\201C'; }
       &:after { content: '\201D'; }
     }
